Fix page jump

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
     font-size: 85px;
     font-weight: bold;
     color: #5f5f5f;
+    text-shadow: 4px 4px #4df0f9;
 }
 
 .navigate {
@@ -35,13 +36,13 @@
 }
 
 .nav-dash {
-    font-size: 26px;
+    font-size: 30px;
     font-weight: bold;
 }
 
 .nav-dash,
 .admin-text {
-    color: color: #rgb(3 101 117);
+    color: #rgb(3 101 117);
 }
 
 .logo {
@@ -51,6 +52,7 @@
 
 .admin-text {
     font-size: 20px;
+    font-weight: bold;
 }
 .admin-logo {
     width: 100%;
@@ -77,6 +79,11 @@
     cursor: pointer;
 }
 
+.btn:hover {
+    box-shadow: 0 8px 12px 0 #5f5f5f, 0 8px 22px 0 #5f5f5f;
+    color: #4df0f9;
+}
+
 .admin-text {
     color: #5f5f5f;
 }
@@ -91,24 +98,23 @@
 .user-card-row {
     width: 100%;
     display: flex;
-    /* flex-wrap: wrap; */
     justify-content: space-around;
 }   
 
 .user-card {
     margin: 0.5vw 2vw 1vw 2vw;
-    width: 25%;
+    width: 18%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0 8px 10px 0 #5f5f5f, 0 8px 22px 0 #5f5f5f;
-    border: 4px solid #57b8bd;
+    box-shadow: 0 8px 22px 0 #5f5f5f, 0 8px 22px 0 #5f5f5f;
+    border: 2px solid rgb(65, 86, 98);
     border-radius: 7px;
 }
 
 .user-card:hover {
     box-shadow: 0 8px 22px 0 #a2eef2, 0 8px 22px 0 #a2eef2;
-    border: 6px solid #339fa3;
+    border: 2px solid #03f5fd;
     border-radius: 12px;
 }
 
@@ -124,7 +130,8 @@
 .image {
     display: block;
     width: 100%;
-    border-bottom: 4px solid #57b8bd;
+    border-bottom: 2px solid rgb(65, 86, 98);
+    border-radius: 7px;
 }
 
 .image-overlay {
